--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,22 @@
 .Header {
-	background-color: #00B5AD;
+	background-color: rgb(50,120,205);
+    font-family: 'NIXGONL-Vb';
     color: white;
     font-size: 2rem;
     padding: 1.2rem;
     text-align: center;
-    font-weight: 600;
     margin-bottom: 2rem;
+}
+
+@font-face {
+    font-family: 'Cafe24Ssurround';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24Ssurround.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'NIXGONL-Vb';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/NIXGONL-Vb.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
