--- a/react-app/src/components/Header/Header.css
+++ b/react-app/src/components/Header/Header.css
@@ -5,7 +5,7 @@
     font-size: 2rem;
     padding: 1.2rem;
     text-align: center;
-    margin-bottom: 2rem;
+    : 2rem;
     user-select: none;
 }
 .HeaderButton {
