--- a/react-app/src/components/ListHeaderItem/ListHeaderItem.css
+++ b/react-app/src/components/ListHeaderItem/ListHeaderItem.css
@@ -1,9 +1,9 @@
 .Items {
+	width: 85%;
 	display: flex;
 	flex-direction: column;
 	margin: 0 auto;
     margin-top: 3%;
-	border-radius: 10px;
 }
 
 @media screen and (max-width:768px) {
